--- a/src/App.css
+++ b/src/App.css
@@ -3,10 +3,11 @@
 }
 .inputwala{
   width: 400px;
-  padding: 100px;
+  padding: 20px;
   box-shadow: 0px 0px 10px black;
   margin: 100px auto;
   display: flex;
+  flex-direction: column;
 
 }
 .inputwala input{
@@ -18,6 +19,7 @@
 .inputwala button{
   width: 100px;
   padding: 10px;
+  margin: 10px auto;
   font-size: 15px;
   background-color: #46a6c1;
   border: none;
